# socker

./: .gitignore  CMakeLists.txt  bind.cpp  bind.h  connect.cpp  connect.h  convert_extension.sh  echo.c  echo.cpp  echo.h  minimal.c  multi_proxy.c  multi_proxy.cpp  multi_proxy.h  oldcode.c  oneTimeBuffer.cpp  oneTimeBuffer.h  proxy.c  proxy.cpp  proxy.h  rasocket.h  send.c  send.cpp  send.h  sessionHandler.c  sessionHandler.cpp  sessionHandler.h  socker.c  socker.cpp  testOneTimeBuffer.c  testOneTimeBuffer.cpp  testOneTimeBuffer.h  testSessionHandler.c  testSessionHandler.cpp  testSessionHandler.h  usage.c  usage.h  utils.c  utils.cpp  utils.h
minimal/: oldcode.c
sockerVS/: sockerVS.sln
sockerVS/sockerVS/: sockerVS.vcxproj
